--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,18 @@
 Django==1.7
-Pillow==3.1.1
-argparse==1.2.1
+Markdown==2.6.6
 django-cors-headers==1.1.0
+django-filter==0.13.0
 djangorestframework==3.3.3
+flake8==2.5.4
+mccabe==0.4.0
 pbr==1.8.1
+pep8==1.7.0
 psycopg2==2.6.1
+pyflakes==1.0.0
+pytz==2016.3
 six==1.10.0
 stevedore==1.12.0
-virtualenv==15.0.0
+virtualenv==15.0.1
 virtualenv-clone==0.2.6
 virtualenvwrapper==4.7.1
 wheel==0.29.0
