--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -11,7 +11,9 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angularjs-slider": "~2.11.0",
-    "angular-bootstrap": "~1.3.2"
+    "angular-bootstrap": "~1.3.2",
+    "angular-i18n": "1.5.5",
+    "angular-ui-router": "~0.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
