--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -13,7 +13,8 @@
     "angularjs-slider": "~4.0.2",
     "angular-bootstrap": "~1.3.2",
     "angular-i18n": "1.5.5",
-    "angular-ui-router": "~0.3.0"
+    "angular-ui-router": "~0.3.0",
+    "ng-tags-input": "~3.1.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
